# course-app

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yaml
.github/workflows/: workflow.yaml
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: .env  __init__.py  db.py
src/db/: Database.db  db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/models/: rf_db_v1
src/model/pipeline/: collection.py  model.py  preparation.py
