[tool.poetry]
name = "module2"
version = "0.1.0"
description = ""
authors = ["Arun Hegde <ashegde13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
